--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<title>React App</title>
-	<script defer="defer" src="/build/static/js/main.076df56e.js"></script><link href="/build/static/css/main.e90a6a9d.css" rel="stylesheet">
+	<script defer="defer" src="/static/js/main.076df56e.js"></script><link href="/static/css/main.e90a6a9d.css" rel="stylesheet">
 </head>
 <body
 ><div id="root">
