--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<title>React App</title>
-	<script defer="defer" src="static/js/main.076df56e.js"></script><link href="static/css/main.e90a6a9d.css" rel="stylesheet">
+	<link href="static/css/main.e90a6a9d.css" rel="stylesheet">
 </head>
-<body
-><div id="root">
-	
-</div>
+<body>
+	<div id="root"></div>
+	<script defer="defer" src="static/js/main.076df56e.js"></script>
 </body
 ></html>
